Fix check-manifest config

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,9 @@ exclude_lines =
 ignore =
     .update-locales.sh
     .install-hooks.sh
+	.gitlab-ci.yml
+	pretixplugin.toml
+	pytest.ini
     Makefile
     manage.py
     tests/*
